# ibanforge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  refresh-bic.yml
data/: stats.sqlite
docs/business/: analyse-modele-economique.md  data-sources.md  roadmap-economique.md
docs/marketing/: devto-article.md  indiehackers.md  product-hunt.md  reddit.md  show-hn.md  twitter-thread.md
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/components/: code-block.tsx  conditional-shell.tsx  donut-chart.tsx  json-viewer.tsx  line-chart.tsx  locale-switcher.tsx  site-footer.tsx  site-header.tsx  stat-card.tsx  uptime-bar.tsx
frontend/i18n/: routing.ts
frontend/lib/: api-client.ts  auth.ts  blog.ts  mdx.ts
frontend/messages/: de.json  en.json  fr.json
frontend/public/: humans.txt  ibanforge-postman.json  llms-full.txt  llms.txt
scripts/: build-bic-data.ts  enrich-countries.ts
sdks/python/: README.md  pyproject.toml
sdks/python/ibanforge/: __init__.py  client.py
sdks/typescript/: README.md  package-lock.json  package.json
src/: index.ts  types.ts
src/db/: bic_data.json  schema.sql  seed.ts
src/lib/: bic-lookup.test.ts  bic-lookup.ts  bic-validator.test.ts  bic-validator.ts  cache.ts  countries.test.ts  (+10 more)
(+113 files in other folders)
